[project]
name = "powerchime-log-analyzer"
version = "0.1.0"
description = "PowerChime log analyzer for wake/sleep times"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "pandas>=2.0.0",
    "click>=8.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "numpy>=1.21.0",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "*.py",
    "*.md",
    "*.sh"
]

[tool.rye]
managed = true
dev-dependencies = []
