[project]
name = "powerchime-log-analyzer"
version = "0.1.0"
description = "PowerChime log analyzer for wake/sleep times"
dependencies = [
    "click>=8.0.0",
]
requires-python = ">=3.8"

[project.scripts]
powerchime-analyzer = "powerchime_analyzer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "*.py",
]

[tool.rye]
managed = true
dev-dependencies = [
    "pyinstaller>=6.15.0",
]
